hopefully this prevents multi-line titles from overlapping

--- a/css/screen.css
+++ b/css/screen.css
@@ -90,6 +90,7 @@ ul.posts {
   color: #a00;
   font-weight: bold;
   margin-bottom: 2em;
+  line-height:44px;
 }
 
   .site .title a {
